[package]
name = "unity_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
image = "0.24.6"
lz4_flex = "0.10.0"
lzma-rs = "0.3.0"
num_enum = "0.6.1"
serde_json = "1.0.97"
thiserror = "1.0.40"
