[package]
name = "texture_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
half = "2.3.1"
image = "0.24.7"
rayon = "1.7.0"
thiserror = "1.0.44"
typed-builder = "0.15.2"
